--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,6 +15,16 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
+        <div id="activities-toolbar" style="margin-bottom: 16px; display: flex; gap: 8px; flex-wrap: wrap;">
+          <input type="text" id="activity-search" placeholder="Search activities..." />
+          <select id="activity-filter">
+            <option value="all">All Categories</option>
+          </select>
+          <select id="activity-sort">
+            <option value="name">Sort by Name</option>
+            <option value="schedule">Sort by Time</option>
+          </select>
+        </div>
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
